--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 FAST_REFRESH = false
-MONGO_URI='mongodb+srv://bharat:bharat@cluster0.mfnma.mongodb.net/Ecommerce?retryWrites=true&w=majority'
+MONGO_URI=mongodb+srv://bharat:bharat@cluster0.mfnma.mongodb.net/Ecommerce?retryWrites=true&w=majority
 
 JWT_KEY=adjajfajfaoHKKfleJFSKFLS
 JWT_EXPIRES=5d
