servers side updation

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,8 +1,9 @@
 PORT=4000
-FAST_REFRESH = false
-MONGO_URI=mongodb+srv://bharat:bharat@cluster0.mfnma.mongodb.net/Ecommerce?retryWrites=true&w=majority
+
+MONGO_URI="mongodb+srv://bharat:bharat@cluster0.mfnma.mongodb.net/Ecommerce?retryWrites=true&w=majority"
 
 JWT_KEY=adjajfajfaoHKKfleJFSKFLS
+
 JWT_EXPIRES=5d
 
 COOKIE_EXPIRE=5
@@ -14,5 +15,7 @@ SMPT_MAIL=bharatecommerce22@gmail.com
 SMPT_PASSWORD=ljvhhhfwbfxvhsfc
 
 CLOUDINARY_NAME=dbhf7xh4q
+
 CLOUDINARY_API_KEY:887173712287675
+
 CLOUDINARY_SECRET_KEY: T8bjOinQ4NWc7mphFRuVA9PDifY
