env path updated

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -19,3 +19,5 @@ CLOUDINARY_NAME=dbhf7xh4q
 CLOUDINARY_API_KEY:887173712287675
 
 CLOUDINARY_SECRET_KEY: T8bjOinQ4NWc7mphFRuVA9PDifY
+
+FRONTEND_URL=http://127.0.0.1:3000
