--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
         "@material-ui/icons": "^4.11.3",
         "@material-ui/lab": "^4.0.0-alpha.61",
         "@mui/material": "^5.11.10",
+        "@stripe/react-stripe-js": "^1.16.5",
+        "@stripe/stripe-js": "^1.47.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
