--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "stripe": "^11.12.0",
     "swiper": "^9.0.4",
     "validator": "^13.9.0"
   },
