--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Bharat",
   "license": "ISC",
   "dependencies": {
+    "@mui/x-data-grid": "^5.17.25",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cloudinary": "^1.34.0",
@@ -22,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1",
