--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "@material-ui/icons": "^4.11.3",
         "@material-ui/lab": "^4.0.0-alpha.61",
         "@mui/material": "^5.11.10",
+        "@mui/x-data-grid": "^6.0.1",
         "@stripe/react-stripe-js": "^1.16.5",
         "@stripe/stripe-js": "^1.47.0",
         "@testing-library/jest-dom": "^5.16.5",
