--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node backend/app.js",
+        "build": "cd frontend && npm install && npm run build",
         "dev": "nodemon backend/app.js"
     },
     "author": "Bharat",
