--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node backend/app.js",
-        "build": "npm install && cd frontend && npm install && npm run build",
+        "build": "npm install && cd frontend && npm install && npm run build && cd ..",
         "dev": "nodemon backend/app.js"
     },
     "author": "Bharat",
