--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "proxy": "https://bharatecommerce.onrender.com",
-    "main": "backend/server.js",
+    "main": "backend/app.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
