origin changed for req

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ecom",
+    "name": "shopSwift",
     "version": "1.0.0",
     "description": "",
     "proxy": "https://bharatecommerce.onrender.com",
